gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-egressgateway
  namespace: <app_namespace>
spec:
  selector:
    istio: egressgateway
  servers:
  - hosts:
    - ibm.com
    - google.com
    port:
      name: tls
      number: 443
      protocol: TLS
    tls:
      mode: PASSTHROUGH
